@@ -82,7 +82,8 @@ makeindexk - maintained here, by us
 makejvf - by Japanese TeX Development Community (Takuji, Hironobu et al.)
   https://github.com/texjporg/tex-jp-build
 
-mendexk - maintained here, by us (Takuji, Akira et al.)
+mendexk - by Japanese TeX Development Community (Takuji, Hironobu et al.)
+  https://github.com/texjporg/tex-jp-build
 
 musixtnt 2016-01-30 - checked 10feb16
   http://mirror.ctan.org/macros/musixtnt/
@@ -108,7 +109,7 @@ ttfdump - maintained here, by us, since Taiwan upstream apparently gone.
 
 upmendex 0.52 - by Takuji Tanaka
   http://www.ctan.org/pkg/upmendex
-  http://www.t-lab.opal.ne.jp/tex/uptex_en.html
+  https://github.com/t-tk/upmendex-package
 
 web2c - maintained here, by us - core web2c, plain tex, etc.
   The TeX variant dirs (pdftexdir, xetexdir, etc.)
